--- a/CreditScoreInterface/app.config
+++ b/CreditScoreInterface/app.config
@@ -3,11 +3,17 @@
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="CreditScoreServicePortBinding"/>
+                <binding name="CreditScoreServicePortBinding" />
+                <binding name="CreditScoreServicePortBinding1" />
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://datdb.cphbusiness.dk:8080/CreditBureau/CreditScoreService" binding="basicHttpBinding" bindingConfiguration="CreditScoreServicePortBinding" contract="CreditScoreService.CreditScoreService" name="CreditScoreServicePort"/>
+            <endpoint address="http://datdb.cphbusiness.dk:8080/CreditBureau/CreditScoreService"
+                binding="basicHttpBinding" bindingConfiguration="CreditScoreServicePortBinding"
+                contract="CreditScoreService.CreditScoreService" name="CreditScoreServicePort" />
+            <endpoint address="http://datdb.cphbusiness.dk:8080/CreditBureau/CreditScoreService"
+                binding="basicHttpBinding" bindingConfiguration="CreditScoreServicePortBinding1"
+                contract="CreditScoreService.CreditScoreService" name="CreditScoreServicePort1" />
         </client>
     </system.serviceModel>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
