--- a/RabbitMQBank/RabbitMQBank.csproj
+++ b/RabbitMQBank/RabbitMQBank.csproj
@@ -57,6 +57,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\LoanBroker\LoanBroker.csproj">
+      <Project>{3a28c3d7-dc4f-4e06-b4bd-be4408bbc019}</Project>
+      <Name>LoanBroker</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SimpleBank\SimpleBank.csproj">
       <Project>{da9105ac-c9e6-4c1c-9ede-9afb65c08070}</Project>
       <Name>SimpleBank</Name>
