--- a/RabbitMQBankTest/RabbitMQBankTest.csproj
+++ b/RabbitMQBankTest/RabbitMQBankTest.csproj
@@ -55,6 +55,12 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Utility\Utility.csproj">
+      <Project>{2f4585b1-779c-4093-86b8-290f69b93d6d}</Project>
+      <Name>Utility</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
