--- a/Utility/Utility.csproj
+++ b/Utility/Utility.csproj
@@ -57,7 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SendMessage.cs" />
+    <Compile Include="HandleMessaging.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
