--- a/CreditScoreFetcher/App.config
+++ b/CreditScoreFetcher/App.config
@@ -1,6 +1,24 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="CreditScoreServicePortBinding" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://datdb.cphbusiness.dk:8080/CreditBureau/CreditScoreService" binding="basicHttpBinding" bindingConfiguration="CreditScoreServicePortBinding" contract="CreditScoreService.CreditScoreService" name="CreditScoreServicePort" />
+        </client>
+    </system.serviceModel>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
