--- a/RuleBaseWebService/RuleBaseWebService.csproj
+++ b/RuleBaseWebService/RuleBaseWebService.csproj
@@ -64,6 +64,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="BankList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RuleBase.asmx.cs">
       <DependentUpon>RuleBase.asmx</DependentUpon>
