--- a/RuleBaseService/RuleBaseService.csproj
+++ b/RuleBaseService/RuleBaseService.csproj
@@ -85,6 +85,12 @@
       <SubType>Component</SubType>
     </Compile>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LoanBroker\LoanBroker.csproj">
+      <Project>{3a28c3d7-dc4f-4e06-b4bd-be4408bbc019}</Project>
+      <Name>LoanBroker</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
