Alot of useless things

--- a/RuleBaseFetcher/App.config
+++ b/RuleBaseFetcher/App.config
@@ -11,4 +11,16 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="RuleBaseServiceSoap" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:50854/RuleBaseService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="RuleBaseServiceSoap"
+        contract="RuleBaseService.RuleBaseServiceSoap" name="RuleBaseServiceSoap" />
+    </client>
+  </system.serviceModel>
 </configuration>
