--- a/RuleBaseWebServiceTest/app.config
+++ b/RuleBaseWebServiceTest/app.config
@@ -3,13 +3,13 @@
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup><system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="RuleBaseSoap" />
+                <binding name="RuleBaseServiceSoap" />
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:55971/RuleBase.asmx" binding="basicHttpBinding"
-                bindingConfiguration="RuleBaseSoap" contract="RuleBaseInterface.RuleBaseSoap"
-                name="RuleBaseSoap" />
+            <endpoint address="http://localhost:50854/RuleBaseService.asmx"
+                binding="basicHttpBinding" bindingConfiguration="RuleBaseServiceSoap"
+                contract="RuleBaseInterface.RuleBaseServiceSoap" name="RuleBaseServiceSoap" />
         </client>
     </system.serviceModel>
 </configuration>
