--- a/UniversalTranslator/App.config
+++ b/UniversalTranslator/App.config
@@ -1,6 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="UniversalTranslator.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="WebServiceBankSoap" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost:59915/WebServiceBank.asmx"
+                binding="basicHttpBinding" bindingConfiguration="WebServiceBankSoap"
+                contract="WebServiceBank.WebServiceBankSoap" name="WebServiceBankSoap" />
+        </client>
+    </system.serviceModel>
+    <applicationSettings>
+        <UniversalTranslator.Properties.Settings>
+            <setting name="UniversalTranslator_WebServiceBank_WebServiceBank"
+                serializeAs="String">
+                <value>http://localhost:59915/WebServiceBank.asmx</value>
+            </setting>
+        </UniversalTranslator.Properties.Settings>
+    </applicationSettings>
 </configuration>
