Removed Utility and added it to lonbroker.utility

--- a/UniversalTranslator/App.config
+++ b/UniversalTranslator/App.config
@@ -1,7 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="UniversalTranslator.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -15,17 +15,22 @@
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:59915/WebServiceBank.asmx"
-                binding="basicHttpBinding" bindingConfiguration="WebServiceBankSoap"
-                contract="WebServiceBank.WebServiceBankSoap" name="WebServiceBankSoap" />
+            <endpoint address="http://localhost:59915/WebServiceBank.asmx" binding="basicHttpBinding" bindingConfiguration="WebServiceBankSoap" contract="WebServiceBank.WebServiceBankSoap" name="WebServiceBankSoap" />
         </client>
     </system.serviceModel>
     <applicationSettings>
         <UniversalTranslator.Properties.Settings>
-            <setting name="UniversalTranslator_WebServiceBank_WebServiceBank"
-                serializeAs="String">
+            <setting name="UniversalTranslator_WebServiceBank_WebServiceBank" serializeAs="String">
                 <value>http://localhost:59915/WebServiceBank.asmx</value>
             </setting>
         </UniversalTranslator.Properties.Settings>
     </applicationSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
