--- a/RuleBaseFetcher/App.config
+++ b/RuleBaseFetcher/App.config
@@ -18,9 +18,7 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:50854/RuleBaseService.asmx"
-        binding="basicHttpBinding" bindingConfiguration="RuleBaseServiceSoap"
-        contract="RuleBaseService.RuleBaseServiceSoap" name="RuleBaseServiceSoap" />
+      <endpoint address="http://localhost:50854/RuleBaseService.asmx" binding="basicHttpBinding" bindingConfiguration="RuleBaseServiceSoap" contract="RuleBaseService.RuleBaseServiceSoap" name="RuleBaseServiceSoap" />
     </client>
   </system.serviceModel>
 </configuration>
