--- a/LoanBroker/LoanBroker.csproj
+++ b/LoanBroker/LoanBroker.csproj
@@ -51,7 +51,6 @@
     <Compile Include="model\Bank.cs" />
     <Compile Include="model\LoanRequest.cs" />
     <Compile Include="model\LoanResponse.cs" />
-    <Compile Include="Normalizer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -60,6 +59,7 @@
     </Compile>
     <Compile Include="TranslatorBase.cs" />
     <Compile Include="Utility\HandleMessaging.cs" />
+    <Compile Include="Utility\Queues.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
