--- a/LoanBroker/LoanBroker.csproj
+++ b/LoanBroker/LoanBroker.csproj
@@ -58,6 +58,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="TranslatorBase.cs" />
+    <Compile Include="Utility\BankingUtility.cs" />
     <Compile Include="Utility\HandleMessaging.cs" />
     <Compile Include="Utility\Queues.cs" />
   </ItemGroup>
