--- a/WebServiceBank/WebServiceBank.csproj
+++ b/WebServiceBank/WebServiceBank.csproj
@@ -79,9 +79,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SimpleBank\SimpleBank.csproj">
-      <Project>{da9105ac-c9e6-4c1c-9ede-9afb65c08070}</Project>
-      <Name>SimpleBank</Name>
+    <ProjectReference Include="..\LoanBroker\LoanBroker.csproj">
+      <Project>{3a28c3d7-dc4f-4e06-b4bd-be4408bbc019}</Project>
+      <Name>LoanBroker</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
